--- a/vignettes/GWAScatPaper.Rmd
+++ b/vignettes/GWAScatPaper.Rmd
@@ -5,6 +5,7 @@ date: "2023-06-23"
 output: 
   bookdown::pdf_document2:
     toc: false
+    number_sections: false
 
 vignette: >
   %\VignetteIndexEntry{Ontology and Corpus Aided Searching of Complex Data Resources}
@@ -30,7 +31,7 @@ library("DT")
 
 Larger and more complex biomedical data sets are becoming increasingly available and they provide substantial opportunities for integration across disparate data source to enable the discovery of medically relevant relationships. Tools for representing and organizing biomedical entities and concepts are key components of any system that processes disease, medical or epidemiological data. Realizing the potential for discovery is hampered by the complexity of the data and the inherent challenge of working with phenotypes and experimental factors described primarily in natural language. To work with these textual descriptions there are a plethora of ontologies and vocabularies that are in use such as Unified Medical Language System (UMLS), @UMLS2004 , Medical Subject Headings (MeSH), Human Phenotype Ontology (HPO), @HPO2024, and the Experimental Factor Ontology (EFO), @maloneModelingSampleVariables2010. Finding and grouping or
 comparing phenotypes of
-research interest in large data resources such as NHANES @cdc2024 or biobanks, such as the UKBB @UKBB, can be aided by effective use of
+research interest in large data resources such as NHANES, @cdc2024, or biobanks, such as the UKBB, @UKBB, can be aided by effective use of
 ontologies and tools for natural language processing.
 
 We explore some of these challenges in the context of the GWAS catalog, @sollisNHGRIEBIGWASCatalog2023, which reports on a set of published curated GWAS association studies where the phenotypic traits reported in published articles are mapped to terms in the EFO. A GWAS reports on assocations between single nucleotide polymorphisms (SNPs), which are variants in the human genome, and specific traits or phenotypes.  The GWAS catalog provides an integrated database of a large set of published GWAS studies curated from the scientific literature and collated, together with a large amount of metadata. Users can freely download and search the data for different purposes. While the data are freely available, access to them through easy to use interfaces designed for non-experts appears to be mainly through search facilities on the GWAS catalog website. Our interest is in integrating this resouce with search facilities in the R programming language in order to provide programmatic access to the data and to enable the sorts of complex searches that would be of interest in epidemiological and other fields.
@@ -38,7 +39,7 @@ We explore some of these challenges in the context of the GWAS catalog, @sollisN
 To facilitate searching for traits we use a search strategy that combines the use of a dictionary (corpus based) search combined with an ontology based search.  We create a dictionary search capability that is built on the textual descriptions from both the GWAS catalog and EFO which we combine with a set of tools designed to make use of the relationships and concepts in the ontology.  We demonstrate how these tools, when used together, enable programmatic search of the GWAS catalog. The approach has some similarity to that of phenotagger, @phenotagger, a method that combines both dictionary and machine learning-based methods to identify (HPO) concepts in unstructured biomedical text.
 
 
-In particular we examine the use of corpus search tools, as exemplified in the `corpustools` package
+In particular we examine the use of corpus search tools, as exemplified in the `corpustools` package,
 @atteveldtCorpustoolsManagingQuerying2023, to help search the set of traits that are
 reported on by the GWAS catalog. Since these investigator defined traits have been hand curated by the
 EBI and mapped to terms in the EFO we also examine how that mapping can be used to aid the analysis and interpretation of the data. Our software is contained in the `gwasCatSearch` package, @gentlemanGwasCatSearchPackageSupport2024a, which is open source and freely available.
@@ -232,7 +233,7 @@ ans = list(Object = efo_df$Object[efoidx], Synonyms=getSynonyms("EFO:0003086"),
 ```
 
 In Figure \@ref(fig:efograph) we render a portion of the EFO ontology that is anchored at the node
-labeles urinary system disease, EFO:0009690, and shows all of the descendents of that term.
+labeled urinary system disease, EFO:0009690, and shows all of the descendents of that term.
 
 ```{r efograph, echo=FALSE, fig.cap = "Rendering of the EFO Ontology for urinary system disease and descendents.", fig.align='center', out.width="75%"}
 knitr::include_graphics("figure/demopic.png")
