--- a/vignettes/gwasCatSupplement.Rmd
+++ b/vignettes/gwasCatSupplement.Rmd
@@ -3,8 +3,9 @@ title: "gwasCatSupplement"
 author: "Robert Gentleman, Rafael Goncalves, Vince Carey"
 date: "`r Sys.Date()`"
 output: 
-  bookdown::html_document2: 
+  bookdown::pdf_document2: 
     number_sections: false
+    
 vignette: >
   %\VignetteIndexEntry{Supplementary Material}
   %\VignetteEngine{knitr::rmarkdown}
@@ -29,7 +30,7 @@ The data were downloaded and processed according to the description in the GWASC
 
 A schema of the resulting tables is given in Figure \@ref(fig:sqltabs).
 
-```{r sqltabs, echo=FALSE, fig.cap = "Table descriptions for GWAS catalog processed data."}
+```{r sqltabs, echo=FALSE, fig.cap = "Table descriptions for GWAS catalog processed data.", out.width="90%"}
 knitr::include_graphics("figure/GWASCat.png")
 ```
 
